--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,1 +1,1 @@
-@import "@sap-theming/theming-base-content/content/Base/baseLib/sap_horizon/css_variables.css";
+//@import "@sap-theming/theming-base-content/content/Base/baseLib/sap_horizon/css_variables.css";
