--- a/src/assets/scss/components/_datepicker.scss
+++ b/src/assets/scss/components/_datepicker.scss
@@ -3,6 +3,8 @@
 .datepicker {
 
 
+    font-size: 14px;
+
     * {
         user-select: none;
     }
@@ -16,7 +18,7 @@
         padding: 8px;
         border: 1px solid #ececec;
         text-align: center;
-        font-size: 0.8em;
+        font-size: 1em;
     }
 
     &__nationality {
@@ -24,15 +26,18 @@
         text-align: center;
         color: #0d6efd;
         font-weight: 600;
+        cursor: pointer;
+        font-size: 0.9em;
     }
 
     &__popup {
         position: absolute;
         top: 40px;
         background: #fff;
-        box-shadow: 0 0 10px 4px #f3f3f3;
+        //box-shadow: 0 0 10px 4px #f3f3f3;
         width: 100%;
         border-radius: 8px;
+        border: 1px solid #ededed;
 
         .header {
             display: flex;
@@ -44,33 +49,23 @@
                 font-weight: 600;
                 cursor: pointer;
                 padding: 0 10px;
+                color: #0d6efd;
             }
         }
 
         .content {
             .box {
                 text-align: center;
-                width: 70px;
-                height: 40px;
-                padding: 6px 0;
-                cursor: pointer;
-                border-radius: 50px;
-                color: #4c4c4c;
+                width: 50px;
+                height: 50px;
+                padding: 14px 0;
                 text-overflow: ellipsis;
                 overflow: hidden;
                 white-space: nowrap;
                 transition: background-color ease 0.2s;
 
-                &:hover {
-                    background: #e0e0e0;
-                }
-
-                &--active {
-                    border: 2px solid #0baf74;
-                }
-
                 &--same {
-                    background: #e2fff2;
+                    background: #e1edff;
                 }
 
                 &--disable {
@@ -83,11 +78,32 @@
                 }
             }
 
+            .days{
+                .box{
+                    border: 1px solid transparent;
+                    cursor: pointer;
+                    border-radius: 50px;
+                    color: #4c4c4c;
+                    font-weight: 600;
+                    &:hover {
+                        border-color: #0d6efd;
+                    }
+
+                    &--active {
+                        border: 2px solid #0d6efd;
+                    }
+
+
+                }
+            }
+
             &__header {
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                background: #ddd;
+                .box{
+                    color: #0d6efd;
+                }
             }
 
             .days {
