--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -17,3 +17,4 @@ html, body, #app {
 @import "components/autocomplete";
 @import "components/modal";
 @import "components/tooltip";
+@import "components/calendar-view";
