feat(VDatePicker): create "VDatePicker" component

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -18,3 +18,4 @@ html, body, #app {
 @import "components/modal";
 @import "components/tooltip";
 @import "components/calendar-view";
+@import "components/date-picker";
