--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -14,6 +14,8 @@ html, body, #app {
 
 @import "bootstrap";
 
+
 @import "components/autocomplete";
-@import "component/modal";
+@import "components/modal";
+@import "components/toast";
 @import "components/tooltip";
