--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -14,10 +14,11 @@ html, body, #app {
 
 @import "bootstrap";
 
-
+// Components
 @import "components/autocomplete";
 @import "components/modal";
 @import "components/tooltip";
 @import "components/table";
 @import "components/calendar-view";
 @import "components/date-picker";
+@import "components/collapse-button";
