--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -14,6 +14,7 @@ html, body, #app {
 
 @import "bootstrap";
 
+@import "helpers/icons";
 
 @import "components/autocomplete";
 @import "components/modal";
