refactor(App): Improvement Layout Structure And Style

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -16,6 +16,7 @@ html, body, #app {
 
 @import "helpers/icons";
 
+@import "components/header";
 @import "components/autocomplete";
 @import "components/modal";
 @import "components/tooltip";
