fix(Components): Fix VAutoComplete Option Item UX

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -12,7 +12,9 @@ html, body, #app {
   flex-direction: column;
 }
 
-@import "bootstrap";
+@import "bootstrap/scss/bootstrap";
+
+@import "reboot";
 
 @import "helpers/icons";
 
