feat(Components): Create VOffcanvas Component

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -21,6 +21,7 @@ html, body, #app {
 @import "components/header";
 @import "components/autocomplete";
 @import "components/modal";
+@import "components/offcanvas";
 @import "components/tooltip";
 @import "components/calendar-view";
 @import "components/date-picker";
