--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -25,3 +25,4 @@ html, body, #app {
 @import "components/tooltip";
 @import "components/calendar-view";
 @import "components/date-picker";
+@import "components/sideMenu";
