VSelect list show bottom or top

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -20,6 +20,7 @@ html, body, #app {
 
 @import "components/header";
 @import "components/autocomplete";
+@import "components/select";
 @import "components/modal";
 @import "components/offcanvas";
 @import "components/tooltip";
